--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-notebook>=6.5
-ipywidgets>=8.0
-numpy>=1.23
-pandas>=1.5
-matplotlib>=3.6
-scipy>=1.9
+# Core Jupyter and widget infrastructure
+notebook==6.5.5
+ipywidgets==7.7.5
+widgetsnbextension==3.6.6
+
+# Scientific stack
+numpy==1.26.4
+pandas==2.2.2
+scipy==1.13.0
+matplotlib==3.8.4
